--- a/docs/tutorial/rag-with-vector-store.mdx
+++ b/docs/tutorial/rag-with-vector-store.mdx
@@ -3,18 +3,15 @@ import TabItem from "@theme/TabItem";
 
 # RAG with Vector Store
 
-**Retrieval-Augmented Generation (RAG)** is a powerful method that enhances
-language models with external knowledge. Instead of relying solely on the
-model’s internal training data, RAG retrieves relevant documents from a
-knowledge base—typically a vector store—and injects them into the prompt at
-inference time. This allows the model to generate more accurate, up-to-date, and
-context-aware responses.
+**Retrieval-Augmented Generation (RAG)** is a useful method when you want to
+use AI with your own documents. In RAG, the AI model gets extra knowledge from
+outside sources, usually stored in something called a vector store. Instead of
+depending only on what the model learned during training, RAG finds and adds
+related documents at the time you ask a question. This helps the AI give more
+accurate, up-to-date, and relevant answers.
 
-RAG is particularly useful when:
-
-- The knowledge base is too large to fit within the model’s context window.
-- Real-time or domain-specific information is needed.
-- You want to combine static model knowledge with dynamic data sources.
+In this example, we’ll walk you through a complete RAG workflow — how to build
+a vector store(`VectorStore`) and integrate it to the `Agent`.
 
 ### Initializing a Vector Store
 
