--- a/docs/tutorial/rag-with-vector-store.mdx
+++ b/docs/tutorial/rag-with-vector-store.mdx
@@ -3,18 +3,15 @@ import TabItem from "@theme/TabItem";
 
 # RAG with Vector Store
 
-**Retrieval-Augmented Generation (RAG)** is a powerful method that enhances
-language models with external knowledge. Instead of relying solely on the
-model’s internal training data, RAG retrieves relevant documents from a
-knowledge base—typically a vector store—and injects them into the prompt at
-inference time. This allows the model to generate more accurate, up-to-date, and
-context-aware responses.
+**Retrieval-Augmented Generation (RAG)** is a useful method when you want to
+use AI with your own documents. In RAG, the AI model gets extra knowledge from
+outside sources, usually stored in something called a vector store. Instead of
+depending only on what the model learned during training, RAG finds and adds
+related documents at the time you ask a question. This helps the AI give more
+accurate, up-to-date, and relevant answers.
 
-RAG is particularly useful when:
-
-- The knowledge base is too large to fit within the model’s context window.
-- Real-time or domain-specific information is needed.
-- You want to combine static model knowledge with dynamic data sources.
+In this example, we’ll walk you through a complete RAG workflow — how to build
+a vector store(`VectorStore`) and integrate it to the `Agent`.
 
 ### Initializing a Vector Store
 
@@ -28,9 +25,10 @@ To initialize a vector store:
 
 ```python showLineNumbers
 from ailoy import Runtime
-from ailoy.vectorstore import VectorStore, FAISSConfig
+from ailoy.vectorstore import VectorStore
 
-rt = Runtime() with VectorStore(rt, FAISSConfig(embedding="bge-m3")) as vs:
+rt = Runtime()
+with VectorStore(rt, "bge-m3", "faiss") as vs:
     ...
 ```
 
@@ -38,14 +36,10 @@ rt = Runtime() with VectorStore(rt, FAISSConfig(embedding="bge-m3")) as vs:
 <TabItem {...nodeTab}>
 
 ```typescript showLineNumbers
-import { createRuntime, VectorStore } from "ailoy-node";
+import { startRuntime, defineVectorStore } from "ailoy-node";
 
-const rt = await createRuntime();
-const vs = new VectorStore(rt, {
-  type: "faiss",
-  embedding: "bge-m3",
-});
-await vs.initialize();
+const rt = await startRuntime();
+const vs = await defineVectorStore(rt, "bge-m3", "faiss");
 ```
 
 </TabItem>
@@ -183,8 +177,7 @@ process.stdout.write("\n");
 <TabItem {...pythonTab}>
 
 ```python showLineNumbers
-from ailoy import Runtime
-from ailoy.vectorstore import VectorStore, FAISSConfig
+from ailoy import Runtime, Agent, VectorStore
 
 # Initialize Runtime
 
@@ -192,7 +185,7 @@ rt = Runtime()
 
 # Initialize Agent and VectorStore
 
-with Agent(rt, model_name="qwen3-8b") as agent, VectorStore(rt, FAISSConfig(embedding="bge-m3")) as vs:
+with Agent(rt, "qwen3-8b") as agent, VectorStore(rt, "bge-m3", "faiss") as vs:
     # Insert items
     vs.insert(
         "Ailoy is a lightweight library for building AI applications",
@@ -221,18 +214,15 @@ with Agent(rt, model_name="qwen3-8b") as agent, VectorStore(rt, FAISSConfig(embe
 <TabItem {...nodeTab}>
 
 ```typescript showLineNumbers
-import { createRuntime, createAgent, createVectorStore } from "ailoy-node";
+import { createRuntime, defineAgent, defineVectorStore } from "ailoy-node";
 
 async function main() {
   // Initialize Runtime
   const rt = await createRuntime();
   // Initialize Agent
-  const agent = await createAgent(rt, { model: { name: "qwen3-8b" } });
+  const agent = await defineAgent(rt, "qwen3-8b");
   // Initialize VectorStore
-  const vs = await createVectorStore(rt, {
-    type: "faiss",
-    embedding: "bge-m3",
-  });
+  const vs = await defineVectorStore(rt, "bge-m3", "faiss");
 
   // Insert items
   await vs.insert({
