--- a/docs/tutorial/getting-started.mdx
+++ b/docs/tutorial/getting-started.mdx
@@ -1,12 +1,13 @@
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import CodeTabs, { pythonTab, nodeTab } from "@site/src/components/CodeTabs";
+import TabItem from "@theme/TabItem";
 
 # Getting started
 
 The very first step to using Ailoy is to start a `Runtime`.
 
-<Tabs>
-<TabItem value="py" label="Python">
+<CodeTabs>
+<TabItem {...pythonTab}>
+
 ```python
 from ailoy import Runtime
 
@@ -18,8 +19,10 @@ rt = Runtime()
 # Stop the runtime
 rt.stop()
 ```
+
 </TabItem>
-<TabItem value="node" label="JavaScript(Node)">
+<TabItem {...nodeTab}>
+
 ```typescript
 import { startRuntime } from "ailoy-node";
 
@@ -28,21 +31,24 @@ const rt = await startRuntime();
 
 // ... (your code) ...
 
-# Stop the runtime
-await rt.stop()
+// Stop the runtime
+await rt.stop();
 ```
+
 </TabItem>
-</Tabs>
+</CodeTabs>
 
-The `Runtime` contains Ailoy’s internal engine.
-Most of Ailoy’s functionalities are processed by this internal engine.
+The `Runtime` contains Ailoy’s internal engine. Most of Ailoy’s functionalities
+are processed by this internal engine.
 
-The easiest way to use LLM with Ailoy is working with `Agent` class.
-The `Agent` class provides high-level APIs that abstracts Ailoy’s runtime, allowing you to use the functionality of LLM effortlessly.
-In this example, we’ll use Alibaba's [qwen3](https://github.com/QwenLM/Qwen3) with on-device run.
+The easiest way to use LLM with Ailoy is working with `Agent` class. The `Agent`
+class provides high-level APIs that abstracts Ailoy’s runtime, allowing you to
+use the functionality of LLM effortlessly. In this example, we’ll use Alibaba's
+[qwen3](https://github.com/QwenLM/Qwen3) with on-device run.
 
-<Tabs>
-<TabItem value="py" label="Python">
+<CodeTabs>
+<TabItem {...pythonTab}>
+
 ```python
 from ailoy import Agent
 
@@ -55,38 +61,44 @@ agent = Agent(rt, model_name="qwen3-0.6b")
 # Once the agent is no longer needed, it can be released
 agent.delete()
 ```
+
 </TabItem>
-<TabItem value="node" label="JavaScript(Node)">
+<TabItem {...nodeTab}>
+
 ```typescript
 import { defineAgent } from "ailoy-node";
 
-# Defines an agent.
-# During this step, the model parameters are downloaded and the LLM is set up for execution
-const agent = await defineAgent(rt, "qwen3-0.6b")
+// Defines an agent.
+// During this step, the model parameters are downloaded and the LLM is set up for execution
+const agent = await defineAgent(rt, "qwen3-0.6b");
 
 // ... (your code) ...
 
 // Once the agent is no longer needed, it can be released
-await agent.delete()
+await agent.delete();
 ```
-</TabItem>
-</Tabs>
 
-This process may take some time, as it involves downloading the model parameters.
-Once an Agent is defined, you can run the LLM using the query method.
-The output is returned as an iterator that yields the LLM’s response.
+</TabItem>
+</CodeTabs>
+
+This process may take some time, as it involves downloading the model
+parameters. Once an Agent is defined, you can run the LLM using the query
+method. The output is returned as an iterator that yields the LLM’s response.
 This can also be considered a single step in successive generation process.
 
-<Tabs>
-<TabItem value="py" label="Python">
+<CodeTabs>
+<TabItem {...pythonTab}>
+
 ```python
 # This is where the actual LLM call happens.
 for resp in agent.run("Please give me a short poem about AI"):
-  print(resp.content, end='')
+    print(resp.content, end='')
 print()
 ```
+
 </TabItem>
-<TabItem value="node" label="JavaScript(Node)">
+<TabItem {...nodeTab}>
+
 ```typescript
 // This is where the actual LLM call happens
 for await (const resp of agent.run("Please give me a short poem about AI")) {
@@ -94,29 +106,35 @@ for await (const resp of agent.run("Please give me a short poem about AI")) {
 }
 process.stdout.write("\n");
 ```
+
 </TabItem>
-</Tabs>
+</CodeTabs>
 
 Then, you may see an output similar to this.
 
 ```
-In the heart of innovation, AI dreams take flight—  
-With thoughts that spark and find their way to light.  
-It learns and creates, no bound, no strain—  
+In the heart of innovation, AI dreams take flight—
+With thoughts that spark and find their way to light.
+It learns and creates, no bound, no strain—
 A world of dreams, where dreams may be found.
 ```
 
-:::note
-Don't be surprised if the output changes each time you run it.
-An LLM's output includes a certain level of randomness based on the temperature setting.
+{/* prettier-ignore-start */}
+
+:::note 
+Don't be surprised if the output changes each time you run it. An LLM's
+output includes a certain level of randomness based on the temperature setting.
 :::
+
+{/* prettier-ignore-end */}
 
 All done! You've just activated an LLM. 🎉
 
 Putting it all together, the complete code looks like this:
 
-<Tabs>
-<TabItem value="py" label="Python">
+<CodeTabs>
+<TabItem {...pythonTab}>
+
 ```python
 from ailoy import Runtime, Agent
 
@@ -138,8 +156,10 @@ agent.delete()
 # Stop the runtime
 rt.stop()
 ```
+
 </TabItem>
-<TabItem value="node" label="JavaScript(Node)">
+<TabItem {...nodeTab}>
+
 ```typescript
 import { startRuntime, defineAgent } from "ailoy-node";
 
@@ -157,11 +177,12 @@ import { startRuntime, defineAgent } from "ailoy-node";
   process.stdout.write("\n");
 
   // Once the agent is no longer needed, it can be released
-  await agent.delete()
+  await agent.delete();
 
   // Stop the runtime
-  await rt.stop()
+  await rt.stop();
 })();
 ```
+
 </TabItem>
-</Tabs>
+</CodeTabs>
