--- a/docs/tutorial/rag-with-vector-store.mdx
+++ b/docs/tutorial/rag-with-vector-store.mdx
@@ -3,15 +3,15 @@ import TabItem from "@theme/TabItem";
 
 # RAG with Vector Store
 
-**Retrieval-Augmented Generation (RAG)** is a useful method when you want to
-use AI with your own documents. In RAG, the AI model gets extra knowledge from
+**Retrieval-Augmented Generation (RAG)** is a useful method when you want to use
+AI with your own documents. In RAG, the AI model gets extra knowledge from
 outside sources, usually stored in something called a vector store. Instead of
 depending only on what the model learned during training, RAG finds and adds
 related documents at the time you ask a question. This helps the AI give more
 accurate, up-to-date, and relevant answers.
 
-In this example, we’ll walk you through a complete RAG workflow — how to build
-a vector store(`VectorStore`) and integrate it to the `Agent`.
+In this example, we’ll walk you through a complete RAG workflow — how to build a
+vector store(`VectorStore`) and integrate it to the `Agent`.
 
 ### Initializing a Vector Store
 
@@ -252,5 +252,10 @@ async function main() {
 </TabItem>
 </CodeTabs>
 
-> **Tip:** For best results, ensure your documents are chunked semantically
-> (e.g., by paragraphs or sections).
+{/* prettier-ignore-start */}
+
+:::note
+For best results, ensure your documents are chunked semantically (e.g., by paragraphs or sections).
+:::
+
+{/* prettier-ignore-end */}
