--- a/docs/tutorial/getting-started.mdx
+++ b/docs/tutorial/getting-started.mdx
@@ -1,4 +1,5 @@
 import CodeTabs, { pythonTab, nodeTab } from "@site/src/components/CodeTabs";
+import TerminalBox from '@site/src/components/TerminalBox';
 import TabItem from "@theme/TabItem";
 
 # Getting started
@@ -112,12 +113,12 @@ process.stdout.write("\n");
 
 Then, you may see an output similar to this.
 
-```
+<TerminalBox>
 In the heart of innovation, AI dreams take flight—
 With thoughts that spark and find their way to light.
 It learns and creates, no bound, no strain—
 A world of dreams, where dreams may be found.
-```
+</TerminalBox>
 
 {/* prettier-ignore-start */}
 
