--- a/docs/tutorial/integrate-with-mcp.mdx
+++ b/docs/tutorial/integrate-with-mcp.mdx
@@ -18,7 +18,7 @@ example, the following code connects to the official GitHub MCP server:
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 from mcp import StdioServerParameters
 
 agent.add_tools_from_mcp_server(
@@ -32,7 +32,7 @@ agent.add_tools_from_mcp_server(
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 await agent.addToolsFromMcpServer({
   command: "npx",
   args: ["-y", "@modelcontextprotocol/server-github"],
@@ -54,7 +54,7 @@ Once the tools are registered, the agent can invoke them naturally through its
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 question = "Search the repository named brekkylab/ailoy and describe what it does based on its README.md."
 for resp in agent.query(question):
     print(resp.content, end='')
@@ -64,7 +64,7 @@ print()
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 const question =
   "Search the repository named brekkylab/ailoy and describe what it does based on its README.md.";
 for await (const resp of agent.query(question)) {
@@ -89,7 +89,7 @@ server, and issue a query:
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 from ailoy import Runtime, Agent
 from mcp import StdioServerParameters
 
@@ -112,7 +112,7 @@ with Agent(rt, model_name="qwen3-8b") as agent:
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 import { startRuntime, createAgent } from "ailoy-node";
 
 (async () => {
