--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -42,7 +42,7 @@ The first step is to define a tool.
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 rt = Runtime()
 agent = Agent(rt, model_name="qwen3-8b")
 
@@ -79,7 +79,7 @@ agent.add_restapi_tool(frankfurter)
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 const rt = await startRuntime();
 const agent = await defineAgent(rt, { model: { name: "qwen3-8b" } });
 
@@ -160,7 +160,7 @@ to incorporate real-time exchange rate information into its response.
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?"
 async for resp in agent.run(question):
     print(resp.content, end='')
@@ -170,7 +170,7 @@ print()
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 const question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?";
 for await (const resp in agent.run(question)) {
     process.stdout.write(resp.content);
@@ -209,7 +209,7 @@ You need approximately **415,080 Korean Won** to buy 250 USD and 350 CNY.
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 from ailoy import Runtime, Agent
 
 rt = Runtime()
@@ -232,7 +232,7 @@ rt.stop()
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 import { startRuntime, defineAgent } from "ailoy-node";
 
 (async () => {
