make scroll in terminalbox and etc.

--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -4,7 +4,7 @@ import TerminalBox from '@site/src/components/TerminalBox';
 
 import ToolStructureSvg from "./img/tool-structure.svg";
 
-# Using Tools
+# Using tools
 
 One of the most powerful features in Ailoy is the tool calling system. It allows
 you to extend the capabilities of your LLM by connecting it to external tools or
