--- a/docs/tutorial/using-tools.mdx
+++ b/docs/tutorial/using-tools.mdx
@@ -1,9 +1,10 @@
 import CodeTabs, { pythonTab, nodeTab } from "@site/src/components/CodeTabs";
 import TabItem from "@theme/TabItem";
+import TerminalBox from '@site/src/components/TerminalBox';
 
 import ToolStructureSvg from "./img/tool-structure.svg";
 
-# Using Tools
+# Using tools
 
 One of the most powerful features in Ailoy is the tool calling system. It allows
 you to extend the capabilities of your LLM by connecting it to external tools or
@@ -41,7 +42,7 @@ The first step is to define a tool.
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 rt = Runtime()
 agent = Agent(rt, model_name="qwen3-8b")
 
@@ -78,7 +79,7 @@ agent.add_restapi_tool(frankfurter)
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 const rt = await startRuntime();
 const agent = await defineAgent(rt, { model: { name: "qwen3-8b" } });
 
@@ -159,7 +160,7 @@ to incorporate real-time exchange rate information into its response.
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?"
 async for resp in agent.run(question):
     print(resp.content, end='')
@@ -169,7 +170,7 @@ print()
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 const question = "I want to buy 250 U.S. Dollar and 350 Chinese Yuan with my Korean Won. How much do I need to take?";
 for await (const resp in agent.run(question)) {
     process.stdout.write(resp.content);
@@ -180,9 +181,10 @@ process.stdout.write("\n");
 </TabItem>
 </CodeTabs>
 
-The output looks like this:
+Here's what the output will look like:
 
-```shell
+<TerminalBox>
+{`
 id='call_fe4b76ff-021c-409b-a835-df83b425f35e' type='function' function=ToolCallFunction(name='frankfurter', arguments={'symbols': 'USD,CNY', 'base': 'KRW'})role='tool' name='frankfurter' tool_call_id='call_fe4b76ff-021c-409b-a835-df83b425f35e' content='{"CNY": 0.00516, "USD": 0.00072}'To buy 250 U.S. Dollars (USD) and 350 Chinese Yuan (CNY) using Korean Won (KRW), you need to calculate the total amount of KRW required based on the exchange rates:
 
 - **1 USD = 0.00072 KRW**
@@ -199,14 +201,15 @@ $$ 347,222 \, \text{KRW} + 67,858 \, \text{KRW} = 415,080 \, \text{KRW} $$
 
 ### Final Answer:
 You need approximately **415,080 Korean Won** to buy 250 USD and 350 CNY.
-```
+`}
+</TerminalBox>
 
 ## Complete Example
 
 <CodeTabs>
 <TabItem {...pythonTab}>
 
-```python
+```python showLineNumbers
 from ailoy import Runtime, Agent
 
 rt = Runtime()
@@ -229,7 +232,7 @@ rt.stop()
 </TabItem>
 <TabItem {...nodeTab}>
 
-```typescript
+```typescript showLineNumbers
 import { startRuntime, defineAgent } from "ailoy-node";
 
 (async () => {
